# zebes-nes-emulator

./: .gitmodules  CMakeLists.txt  LICENCE.md  README.md
.github/workflows/: cmake-linux.yml
include/: clock_driver.h  emulator_utility.h
lib/: CMakeLists.txt
lib/z6502-cpu-core/: CMakeLists.txt  README.md
lib/z6502-cpu-core/include/: z6502.h
lib/z6502-cpu-core/src/: CMakeLists.txt  z6502.c
src/: CMakeLists.txt  clock_driver.c  emulator_utility.c  main.c
